--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=bichochique_db
+spring.data.mongodb.auto-index-creation=true
 
 # Configuração da aplicação
 spring.application.name=bichochic-api
@@ -9,4 +10,3 @@ server.port=8080
 
 # Logging
 logging.level.org.springframework=INFO
-
