--- a/bichochic-android/app/src/main/AndroidManifest.xml
+++ b/bichochic-android/app/src/main/AndroidManifest.xml
@@ -2,16 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
+        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/bcbig"
+        android:label="BichoChic"
+        android:roundIcon="@drawable/bc"
         android:supportsRtl="true"
         android:theme="@style/Theme.Eshopcommerce"
         tools:targetApi="31">
+        <activity
+            android:name=".Activity.AddProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.UpdateProductActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.ProductListActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.CartActivity"
             android:exported="false" />
